--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,28 +1,17 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-.bigCounter{
-   
+.bigCounter {
     text-align: center;
-    background: black;
+}
+.container{
+    background-color: hsl(172, 100%, 50%);
 }
 .bigCounter div{
     display: inline-block;
     font-size: 60px;
     line-height: 60px;
+    padding: 10px;
     background: #101010;
     color: white;
-    padding: 10px;
     margin: 3px;
-   
 }
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
